
	Gadu-Gadu:
	* Fixed searching for buddies in public directory. (Tomasz Wasilczyk)
	  (#5242)
	* Better status message handling. (Tomasz Wasilczyk) (#14314)
	* Merged two buddy blocking methods. (Tomasz Wasilczyk) (#5303)
	* Fix building of the bundled libgadu library with older versions
	  of GnuTLS. (patch plucked from upstream) (#14365)

	IRC:
	* Fix the handling of formatting following mIRC ^O (#14436)

	MSN:
	* Fix seemingly random crashing. (#14307)

	XMPP:
	* Do not generate malformed XML ("</>") when setting an empty mood.
	  (#14342)
	* Fix the /join <room> behavior.  (Broken when adding support for
	  <room>@<server>)  (#14205)

	Yahoo:
	* Fix coming out of idle while in an unavailable state

version 2.9.0 (06/23/2011):
	Pidgin:
	* Fix a potential remote denial-of-service bug related to displaying
	  buddy icons.
	* Significantly improved performance of larger IRC channels (regression
	  introduced in 2.8.0).
	* Fix Conversation->Add on AIM and MSN.
	* Entries in the chat user list are sorted properly again.  This was
	  inadvertenly broken in 2.8.0.

	Finch:
	* Fix logging in to ICQ.

	libpurple:
	* media: Actually use the specified TCP port from the TURN configuration to
	  create a TCP relay candidate.

	AIM and ICQ:
	* Fix crashes on some non-mainstream OSes when attempting to
	  printf("%s", NULL).  (Clemens Huebner) (#14297)

	Plugins:
	* The Evolution Integration plugin compiles again.

version 2.8.0 (06/07/2011):
	General:
	* Implement simple silence suppression for voice calls, preventing
	  wasted bandwidth for silent periods during a call. (Jakub Adam)
	  (half of #13180)
	* Added the DigiCert High Assurance CA-3 intermediate CA, needed for
	  validation of the Facebook XMPP interface's certificate.
	* Removed the QQ protocol plugin.  It hasn't worked in a long time and
	  isn't being maintained, therefore we no longer want it.

	Pidgin:
	* Duplicate code cleanup.  (Gabriel Schulhof) (#10599)