@@ -20,6 +20,10 @@ version 2.10.0 (MM/DD/YYYY):
 	* Fix building of the bundled libgadu library with older versions
 	  of GnuTLS. (patch plucked from upstream) (#14365)
 
+	ICQ:
+	* Fix crash selecting Tools->Set Mood when you're online with an
+	  ICQ account that is configured as an AIM account. (#14437)
+
 	IRC:
 	* Fix the handling of formatting following mIRC ^O (#14436)
 
